[gd_scene load_steps=21 format=3 uid="uid://byv1m502ofqaw"]

[ext_resource type="Texture2D" uid="uid://dbvf0up20sqop" path="res://assets/IngeUI/Sky.png" id="1_1hht2"]
[ext_resource type="Script" uid="uid://djspt8im7yakf" path="res://ui/menu/TeacherProfileManagement/update.gd" id="1_alyyl"]
[ext_resource type="FontFile" uid="uid://dxnpu45uo35il" path="res://assets/IngeUI/LilitaOne-Regular.ttf" id="2_alyyl"]
[ext_resource type="Texture2D" uid="uid://b0se0pxo7xs7v" path="res://assets/IngeUI/triangleup.png" id="3_bcubo"]
[ext_resource type="Texture2D" uid="uid://cyhu3wg2mnx34" path="res://assets/IngeUI/triangledown.png" id="4_xw7bh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g2rjs"]
bg_color = Color(0.682353, 0.4, 0.145098, 0.933333)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.231373, 0.121569, 0.0392157, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
shadow_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_axwrr"]
bg_color = Color(0.682353, 0.4, 0.145098, 0.933333)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.231373, 0.121569, 0.0392157, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
shadow_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7uls7"]
bg_color = Color(0.682353, 0.4, 0.145098, 0.933333)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0.231373, 0.121569, 0.0392157, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24
shadow_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a8ira"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_048l1"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6ppo"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rg7va"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q0d0s"]
bg_color = Color(0.6, 0.6, 0.6, 0.454902)
shadow_color = Color(0, 0, 0, 0)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xgfx1"]
bg_color = Color(0.945098, 0.890196, 0.784314, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.431373, 0.27451, 0.137255, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bcubo"]
bg_color = Color(0.740949, 0.501192, 0.278082, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.431373, 0.27451, 0.137255, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
shadow_color = Color(0, 0, 0, 0.643137)
shadow_size = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_alyyl"]
bg_color = Color(1, 0.968627, 0.890196, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.431373, 0.27451, 0.137255, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1hht2"]
bg_color = Color(0.807033, 0.567642, 0.349084, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.431373, 0.27451, 0.137255, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ch5v"]
bg_color = Color(0.298039, 0.686275, 0.313726, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.180392, 0.435294, 0.207843, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
shadow_size = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yrb6b"]
bg_color = Color(0.227451, 0.580392, 0.25098, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.180392, 0.435294, 0.207843, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xw7bh"]
bg_color = Color(0.383203, 0.825988, 0.396028, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.180392, 0.435294, 0.207843, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18

[node name="Update" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_alyyl")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1hht2")

[node name="HeaderPanel" type="Panel" parent="Background"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -719.0
offset_top = 117.0
offset_right = 711.0
offset_bottom = 211.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_g2rjs")

[node name="Label" type="Label" parent="Background/HeaderPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -37.5
offset_right = 176.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.945247, 0.715264, 0.562705, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.231373, 0.121569, 0.0392157, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_alyyl")
theme_override_font_sizes/font_size = 64
text = "UPDATE STUDENT"

[node name="CardAvatar" type="Panel" parent="Background"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 213.0
offset_top = -252.0
offset_right = 696.0
offset_bottom = 269.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_axwrr")

[node name="Label" type="Label" parent="Background/CardAvatar"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -182.0
offset_top = 13.0
offset_right = 182.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.989732, 0.941828, 0.911519, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.231373, 0.121569, 0.0392157, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_alyyl")
theme_override_font_sizes/font_size = 64
text = "AVATAR"
horizontal_alignment = 1

[node name="Card" type="Panel" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -715.0
offset_top = -260.0
offset_right = 139.0
offset_bottom = 261.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_7uls7")

[node name="Label" type="Label" parent="Card"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -182.0
offset_top = 13.0
offset_right = 182.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.989732, 0.941828, 0.911519, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.231373, 0.121569, 0.0392157, 1)
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("2_alyyl")
theme_override_font_sizes/font_size = 64
text = "ENTER NAME"

[node name="Input" type="Panel" parent="Card"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -361.0
offset_top = -121.5
offset_right = 361.0
offset_bottom = 121.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a8ira")

[node name="ScrollOne" type="Panel" parent="Card/Input"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 3.0
offset_top = -89.5
offset_right = 117.0
offset_bottom = 89.5
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a8ira")

[node name="ScrollUpOne" type="Button" parent="Card/Input/ScrollOne"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -24.0
offset_top = -5.0
offset_right = 24.0
offset_bottom = 43.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_048l1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i6ppo")
theme_override_styles/hover = SubResource("StyleBoxFlat_rg7va")
theme_override_styles/focus = SubResource("StyleBoxFlat_q0d0s")
icon = ExtResource("3_bcubo")

[node name="ScrollDownOne" type="Button" parent="Card/Input/ScrollOne"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -43.0
offset_right = 24.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_048l1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q0d0s")
theme_override_styles/focus = SubResource("StyleBoxFlat_q0d0s")
icon = ExtResource("4_xw7bh")

[node name="LabelOne" type="Label" parent="Card/Input/ScrollOne"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -38.0
offset_right = 49.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.231373, 0.121569, 0.0392157, 1)
theme_override_fonts/font = ExtResource("2_alyyl")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_xgfx1")
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollTwo" type="Panel" parent="Card/Input"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 122.0
offset_top = -89.5
offset_right = 236.0
offset_bottom = 89.5
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a8ira")

[node name="ScrollUpTwo" type="Button" parent="Card/Input/ScrollTwo"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_top = -5.0
offset_right = 16.0
offset_bottom = 34.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_048l1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q0d0s")
theme_override_styles/focus = SubResource("StyleBoxFlat_q0d0s")
icon = ExtResource("3_bcubo")

[node name="ScrollDownTwo" type="Button" parent="Card/Input/ScrollTwo"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -34.0
offset_right = 16.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_048l1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q0d0s")
theme_override_styles/focus = SubResource("StyleBoxFlat_q0d0s")
icon = ExtResource("4_xw7bh")

[node name="LabelTwo" type="Label" parent="Card/Input/ScrollTwo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -38.0
offset_right = 49.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.231373, 0.121569, 0.0392157, 1)
theme_override_fonts/font = ExtResource("2_alyyl")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_xgfx1")
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollThree" type="Panel" parent="Card/Input"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 241.0
offset_top = -89.5
offset_right = 355.0
offset_bottom = 89.5
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a8ira")

[node name="ScrollUpThree" type="Button" parent="Card/Input/ScrollThree"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_top = -5.0
offset_right = 16.0
offset_bottom = 34.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_048l1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q0d0s")
theme_override_styles/focus = SubResource("StyleBoxFlat_q0d0s")
icon = ExtResource("3_bcubo")

[node name="ScrollDownThree" type="Button" parent="Card/Input/ScrollThree"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -34.0
offset_right = 16.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_048l1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q0d0s")
theme_override_styles/focus = SubResource("StyleBoxFlat_q0d0s")
icon = ExtResource("4_xw7bh")

[node name="LabelThree" type="Label" parent="Card/Input/ScrollThree"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -38.0
offset_right = 49.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.231373, 0.121569, 0.0392157, 1)
theme_override_fonts/font = ExtResource("2_alyyl")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_xgfx1")
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollFour" type="Panel" parent="Card/Input"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -118.0
offset_top = -89.5
offset_right = -4.0
offset_bottom = 89.5
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a8ira")

[node name="ScrollUpFour" type="Button" parent="Card/Input/ScrollFour"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_top = -5.0
offset_right = 25.0
offset_bottom = 43.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_048l1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q0d0s")
theme_override_styles/focus = SubResource("StyleBoxFlat_q0d0s")
icon = ExtResource("3_bcubo")

[node name="LabelFour" type="Label" parent="Card/Input/ScrollFour"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -38.0
offset_right = 49.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.231373, 0.121569, 0.0392157, 1)
theme_override_fonts/font = ExtResource("2_alyyl")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_xgfx1")
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollDownFour" type="Button" parent="Card/Input/ScrollFour"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -43.0
offset_right = 25.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_048l1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q0d0s")
theme_override_styles/focus = SubResource("StyleBoxFlat_q0d0s")
icon = ExtResource("4_xw7bh")

[node name="ScrollFive" type="Panel" parent="Card/Input"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 363.0
offset_top = -89.5
offset_right = 477.0
offset_bottom = 89.5
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a8ira")

[node name="ScrollUpFive" type="Button" parent="Card/Input/ScrollFive"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_top = -5.0
offset_right = 16.0
offset_bottom = 34.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_048l1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q0d0s")
theme_override_styles/focus = SubResource("StyleBoxFlat_q0d0s")
icon = ExtResource("3_bcubo")

[node name="ScrollDownFive" type="Button" parent="Card/Input/ScrollFive"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -34.0
offset_right = 16.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_048l1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q0d0s")
theme_override_styles/focus = SubResource("StyleBoxFlat_q0d0s")
icon = ExtResource("4_xw7bh")

[node name="LabelFive" type="Label" parent="Card/Input/ScrollFive"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -38.0
offset_right = 49.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.231373, 0.121569, 0.0392157, 1)
theme_override_fonts/font = ExtResource("2_alyyl")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_xgfx1")
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollSix" type="Panel" parent="Card/Input"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 479.0
offset_top = -89.5
offset_right = 593.0
offset_bottom = 89.5
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a8ira")

[node name="ScrollUpSix" type="Button" parent="Card/Input/ScrollSix"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -16.0
offset_top = -5.0
offset_right = 16.0
offset_bottom = 34.0
grow_horizontal = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_048l1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q0d0s")
theme_override_styles/focus = SubResource("StyleBoxFlat_q0d0s")
icon = ExtResource("3_bcubo")

[node name="ScrollDownSix" type="Button" parent="Card/Input/ScrollSix"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -43.0
offset_right = 24.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxFlat_048l1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q0d0s")
theme_override_styles/focus = SubResource("StyleBoxFlat_q0d0s")
icon = ExtResource("4_xw7bh")

[node name="LabelSix" type="Label" parent="Card/Input/ScrollSix"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -38.0
offset_right = 49.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.231373, 0.121569, 0.0392157, 1)
theme_override_fonts/font = ExtResource("2_alyyl")
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxFlat_xgfx1")
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnBack" type="Button" parent="Card"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 62.0
offset_right = 324.0
offset_bottom = 158.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.968627, 0.890196, 1)
theme_override_colors/font_focus_color = Color(1, 0.968627, 0.890196, 1)
theme_override_colors/font_pressed_color = Color(0.290196, 0.227451, 0.164706, 1)
theme_override_fonts/font = ExtResource("2_alyyl")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_bcubo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_alyyl")
theme_override_styles/hover = SubResource("StyleBoxFlat_1hht2")
theme_override_styles/focus = SubResource("StyleBoxFlat_1hht2")
text = "BACK"

[node name="BtnEnter" type="Button" parent="Card"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 223.0
offset_top = 62.0
offset_right = 548.0
offset_bottom = 158.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.968627, 0.890196, 1)
theme_override_colors/font_focus_color = Color(1, 0.968627, 0.890196, 1)
theme_override_colors/font_pressed_color = Color(0.290196, 0.227451, 0.164706, 1)
theme_override_fonts/font = ExtResource("2_alyyl")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_8ch5v")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yrb6b")
theme_override_styles/hover = SubResource("StyleBoxFlat_xw7bh")
theme_override_styles/focus = SubResource("StyleBoxFlat_xw7bh")
text = "ENTER"
